--- a/ShoppingApp/Storyboard/Base.lproj/Main.storyboard
+++ b/ShoppingApp/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vsv-bz-L9O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AfP-4D-u10">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -725,6 +725,7 @@
                     </view>
                     <connections>
                         <outlet property="ImageGIF" destination="CDO-kP-Zb9" id="6TT-qC-qaz"/>
+                        <outlet property="backImageView" destination="xYj-j0-btK" id="TcT-et-xMg"/>
                         <outlet property="pageControl" destination="clp-W7-ue5" id="ClL-O5-2b6"/>
                         <outlet property="productCollectionView" destination="ujd-BI-pPe" id="rTh-p6-9Qo"/>
                         <outlet property="productDescriptionLabel" destination="CpB-Je-ygy" id="n3g-FJ-gxb"/>
@@ -762,7 +763,7 @@
         <!--Cart-->
         <scene sceneID="NCv-Qz-tlK">
             <objects>
-                <viewController id="CK2-oY-0MI" sceneMemberID="viewController">
+                <viewController id="CK2-oY-0MI" customClass="MyCartViewController" customModule="ShoppingApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Lvf-ld-tU5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
